--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <h1 class="head">SHAPE AND COLOR CHANGER</h1>
+    <div id="block">
+      <div id="square"></div>
+    </div>
+
+    <button id="color">Change Color</button>
+    <button id="shape">Change Shape</button>
 
     <script src="src/index.js"></script>
   </body>
